# pycork

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  README.rst  requirements.txt  setup.py
.github/workflows/: pythonpublish.yml
cork/: cork.cpp  cork.h  main.cpp
cork/accel/: aabvh.h
cork/file_formats/: files.cpp  files.h  ifs.cpp  off.cpp
cork/isct/: absext4.h  empty3d.cpp  empty3d.h  ext4.h  fixext4.h  fixint.h  gmpext4.h  quantization.cpp  quantization.h  triangle.cpp  triangle.h  unsafeRayTriIsct.h
cork/math/: bbox.h  ray.h  vec.h
cork/mesh/: mesh.bool.tpp  mesh.cpp  mesh.h  mesh.isct.tpp  mesh.remesh.tpp
cork/rawmesh/: rawMesh.h  rawMesh.tpp
cork/util/: iterPool.h  memPool.h  prelude.h  shortVec.h  timer.cpp  unionFind.h
mpir/: CMakeLists.txt  gmp-h-msvc.in
python/pycork/: __init__.py  module.cpp  utils.h
tests/: context.py  test_geometry.py
